--- a/src/assets/settings.json
+++ b/src/assets/settings.json
@@ -8,7 +8,6 @@
     "start_energy": 75,
     "max_energy": 100,
     "idle_energy_gain": 5,
-    "walking_energy_cost": -0.075,
-    "transition_energy_cost": -5,
-    "clock_tick": 1
+    "walking_energy_cost": 1,
+    "transition_energy_cost": -5
 }
