changed player symbol

--- a/src/assets/settings.json
+++ b/src/assets/settings.json
@@ -1,5 +1,5 @@
 {
-    "player": "🯆",
+    "player": "O",
     "viewport": [61, 29],
     "itemspath": "assets/items",
     "mapspath": "assets/maps",
