--- a/src/assets/settings.json
+++ b/src/assets/settings.json
@@ -1,12 +1,14 @@
 {
     "player": "O",
-    "viewport": [61, 29],
+    "viewport": [
+        61,
+        29
+    ],
     "itemspath": "assets/items",
     "mapspath": "assets/maps",
     "surfacespath": "assets/surfaces",
-    "transition_time": 10, 
+    "transition_time": 10,
     "rest_energy": 2,
     "walking_energy_cost": 0.095,
-    "gadget_classes": ["Clock", "GPS", "EnergyMeter"],
     "help": "\nWelcome to the Turing Club treasure hunt! Open your pocket to find \n the first clue. There are 8 clues in all, and the answer to the one clue will \n point you to the location of the next. There are also many easter eggs \n spread across the vasts areas of IISER M. Happy hunting! \n\n\n Controls: \n \n - WASD for player movement \n - Press P to open pocket \n - Press H to open this help prompt \n - Press Esc to close any window (except the pocket) \n - Use the mouse to click any buttons \n - For a purely keyboard experience; \n use TAB to cycle through buttons and SPACE to click it. \n\n\n In case of any queries, drop a message in the WhatsApp group."
 }
